Added Cookies, wrote code for making view profile request

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,11 @@
             android:label="Forgot Password">
             
         </activity>
+        
+          <activity android:name="com.sqr.dabbawalaapplication.ProfileActivity"
+            android:label="Profile">
+            
+        </activity>
     </application>
 
 </manifest>
